# app/Http/Requests/API/LoginRequest.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Requests\API;
+
+use App\Http\Requests\API\FormRequest;
+
+class LoginRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'email' => 'required|email|exists:users,email',
+            'password' => 'required|min:8'
+        ];
+    }
+}
